Got footer colored and tied to bottom of viewport when content isn't sufficient to push it beyond viewport bounds. Still some text alignment bugs in the sub-700 px view.

--- a/css/colors.css
+++ b/css/colors.css
@@ -20,7 +20,8 @@ h1 {
   /*color: #D5B690 !important;*/
 /*}*/
 footer {
-  color: #5E7888;
+  color: white; /* #5E7888 */
+	background-color: #65967D;
 }
 .top-bar, .bottom-bar {
   background-color: #65967D;
