--- a/css/rest.css
+++ b/css/rest.css
@@ -1,3 +1,13 @@
+html, body {
+/*	margin: 0;
+	padding: 0;
+*/	height: 100%;
+}
+#wrapper {
+	min-height: 100%;
+	position: relative;
+}
+
 header {
   border-radius: 0 0 0.5em 0.5em;
 }
@@ -14,20 +24,32 @@ ul {
   padding-left: 0px;
   text-align: right;
 }
+section {
+	padding-bottom: 6.15%;
+}
 section .grids [class*="grid-"] {
-	padding: 0px 30px;
+	padding: 0 14.583% 14.583% 14.583%; /* grid-2 width is 14.583% */
 }
 section ul {
 	text-align: left;
 }
 footer {
   text-align: right;
+	width: 100%;
+	height: 6.15%;
+	bottom: 0;
+	position: absolute;
+	left: 0;
 }
+/*footer .grids [class*="grid-"] {
+	padding: 0 14.583% 14.583% 14.583%;
+}
+*/
 .top-bar, .bottom-bar {
   height: 0.5em;
 }
 .top-bar {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 .bottom-bar {
   margin-top: 30px;
