--- a/css/type.css
+++ b/css/type.css
@@ -4,11 +4,11 @@ body {
     font-weight: 400;
 }
 header a {
-    font-weight: 600;
+    font-weight: 400;
 }
 h1 {
     font-size: 3em; /* 48 / 16 */
-    font-weight: 600;
+    font-weight: 400;
     line-height: 1em; /* 48 / 48 */
     margin-bottom: .5em; /* 24 / 48 */
 }
